
cmake_minimum_required(VERSION 3.24)
project(code C)
set(CMAKE_C_STANDARD 11)
set(CMAKE_REQUIRED_FLAGS "-Wl,--dynamicbase")
#add_executable(code Intro/App.c)
#add_executable(code Header/App.c Header/pingpong.c Header/autopingpong.h Header/autopingpong.c)
#add_executable(code Memory/App.c Memory/memmap.c)
#add_executable(code input/inputfuncs.c)
#add_executable(code overflow/App.c)
#add_executable(code panda/App.c panda/panda.c )
#add_executable(code fileio/App.c fileio/fileio.c fileio/fileio.h fileio/db.h fileio/db.c)
#add_executable(code dma/app.c dma/dma.c dma/dma.h)
#add_executable(code BitOp/App.c)
#add_executable(code funcpointer/app.c funcpointer/funcs.c)
#add_executable(code math/app.c math/mathfunc.c)
#add_executable(code struct/structs.c struct/app.c )
add_executable(code bitmap/App.c bitmap/bitmap.c bitmap/bitmap.h)

